--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-sprung.application.name=naming-server
-server.port=8761
-spring.cloud.config.import-check.enabled=false
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+spring.application.name=naming-server
 
+server.port=8761
+
+#This is a eureka server so no need to register
+eureka.client.register-with-eureka=false
+
+#This is a eureka server no need to fetch registry
+eureka.client.fetch-registry=false
